deploy/ilb-to-ingress-relay.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ilb-to-ing-relay
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    app: ilb-to-ing-relay
spec:
  type: LoadBalancer
  selector:
    app: nginx-ingress-em-test-nginx-ingress
  ports:
  - port: 80
    name: http
    targetPort: 80
    protocol: TCP
  - port: 443
    name: tls
    targetPort: 443
    protocol: TCP
