deploy/socat.service.yml
apiVersion: v1
kind: Service
metadata:
  name: socat-service
  labels:
    app: socat-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 10081
  selector:
    app: socat-service
